--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ Main Site warp
  ---------------------*/
 
 .main-site-warp {
-	height: 100%;
+	height: auto;
 	width: 100%;
 	position: relative;
 }
@@ -807,7 +807,7 @@ Blog page
  ---------------------*/
 
 .blog-page {
-	padding-right: 70px;
+	padding: 0 30px;
 	background-color: #D4C9B4;
 }
 
