--- a/css/style.css
+++ b/css/style.css
@@ -1236,7 +1236,7 @@ Responsive
 	.portfolio-section,
 	.contact-section,
 	.elements-section {
-		padding: 0 15px;
+		padding: 0 15px 1px;
 		margin: 0;
 	}
 	.blog-post-item:last-child {
